--- a/_includes/footer-minimal.html
+++ b/_includes/footer-minimal.html
@@ -4,11 +4,11 @@
       {{ site.author }}
       &nbsp;&nbsp;&bull;&nbsp;&nbsp;
     {% endif %}
-    {% if page.date %}
+<!--     {% if page.date %}
       {{ page.date }}
     {% else %}
       {{ site.time | date: '%Y' }}
-    {% endif %}
+    {% endif %} -->
 
     {% if site.url-pretty %}
       &nbsp;&nbsp;&bull;&nbsp;&nbsp;
